Fix CSS (z-index issue with mobile menu)

--- a/assets/css/to-search-rtl.css
+++ b/assets/css/to-search-rtl.css
@@ -105,6 +105,8 @@ body.home .page-banner .to-search-form .input-group { margin: 0 auto; }
 
 .ssm-nav-is-open { overflow: hidden; }
 
+.ssm-nav-is-open #secondary { z-index: 9999; }
+
 .ssm-row-margin-bottom { margin-bottom: 4.25rem; }
 
 .ssm-row-margin-top { margin-top: 4.25rem; }
